--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# ANTLR generated files
+**/ANTLR/*.interp
+**/ANTLR/*.tokens
+**/ANTLR/*.cs
+!**/ANTLR/*.g4
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -38,6 +44,11 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
+
+# Test coverage and results
+coverage/
+*.coverage
+*.coveragexml
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
