feat: integrate MAME execution verification and CI caching
- Added GameVM.DevTools for cross-platform MAME management.
- Implemented monitor.lua for hardware state capture.
- Integrated MAME-based behavioral tests into lit suite.
- Updated GitHub Actions with MAME caching and automated lit tests.
- Note: .tools/ directory is gitignored; CI uses caching and DevTools download.

--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,10 @@ coveragereport/
 **/.antlr/
 **/tools/
 !**/tools/packages.config
+
+# SonarQube
+.sonarqube/
+
+# Test Output
+test_output.txt
+.tools/
