--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,20 @@ jobs:
         run: |
           dotnet tool install --global dotnet-coverage
           $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
+      - name: Cache MAME
+        uses: actions/cache@v4
+        with:
+          path: .tools/mame
+          key: ${{ runner.os }}-mame-v0284 # Use specific version for cache key
+          
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          
+      - name: Install lit
+        run: pip install lit
+        
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -55,7 +69,18 @@ jobs:
           dotnet build
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
+          # Run Unit/BDD tests
           dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+          
+          # Install MAME via DevTools (uses cache if available)
+          dotnet run --project src/GameVM.DevTools -- mame install
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+
+          # Run Behavioral (lit) tests
+          # We use the built DLL for stability
+          $lit_path = $(python -c "import sys; import os; print(os.path.join(sys.prefix, 'Scripts', 'lit.exe') if os.name == 'nt' else os.path.join(sys.prefix, 'bin', 'lit'))")
+          & $lit_path -v test/GameVM.Compiler.Atari2600.Tests/lit-tests
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
