--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,16 +73,15 @@ jobs:
           dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
-          # TODO: Re-enable MAME behavioral tests once Windows .exe extraction is resolved
-          # Install MAME via DevTools (uses cache if available)
-          # dotnet run --project src/GameVM.DevTools -- mame install
-          # if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+          # Install MAME via DevTools (uses cache if available, supports silent .exe extraction)
+          dotnet run --project src/GameVM.DevTools -- mame install
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
 
           # Run Behavioral (lit) tests
           # We use the built DLL for stability
-          # $lit_path = $(python -c "import sys; import os; print(os.path.join(sys.prefix, 'Scripts', 'lit.exe') if os.name == 'nt' else os.path.join(sys.prefix, 'bin', 'lit'))")
-          # & $lit_path -v test/GameVM.Compiler.Atari2600.Tests/lit-tests
-          # if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+          $lit_path = $(python -c "import sys; import os; print(os.path.join(sys.prefix, 'Scripts', 'lit.exe') if os.name == 'nt' else os.path.join(sys.prefix, 'bin', 'lit'))")
+          & $lit_path -v test/GameVM.Compiler.Atari2600.Tests/lit-tests
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
