--- a/src/GameVM.Compiler.CSharp/GameVM.Compiler.CSharp.csproj
+++ b/src/GameVM.Compiler.CSharp/GameVM.Compiler.CSharp.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GameVM.Compiler.Core\GameVM.Compiler.Core.csproj" />
+  </ItemGroup>
+
 </Project>
