--- a/test/GameVM.Compiler.Optimizers.MidLevel.Tests/GameVM.Compiler.Optimizers.MidLevel.Tests.csproj
+++ b/test/GameVM.Compiler.Optimizers.MidLevel.Tests/GameVM.Compiler.Optimizers.MidLevel.Tests.csproj
@@ -21,19 +21,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.6.0.109712">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GameVM.Compiler.Application\GameVM.Compiler.Application.csproj" />
-    <ProjectReference Include="..\GameVM.Compiler.Core\GameVM.Compiler.Core.csproj" />
-    <ProjectReference Include="..\GameVM.Compiler.Pascal\GameVM.Compiler.Pascal.csproj" />
-    <ProjectReference Include="..\GameVM.Compiler.Optimizers.MidLevel\GameVM.Compiler.Optimizers.MidLevel.csproj" />
-    <ProjectReference Include="..\GameVM.Compiler.Optimizers.LowLevel\GameVM.Compiler.Optimizers.LowLevel.csproj" />
-    <ProjectReference Include="..\GameVM.Compiler.Backend.Atari2600\GameVM.Compiler.Backend.Atari2600.csproj" />
+    <ProjectReference Include="..\..\src\GameVM.Compiler.Optimizers.MidLevel\GameVM.Compiler.Optimizers.MidLevel.csproj" />
+    <ProjectReference Include="..\..\src\GameVM.Compiler.Core\GameVM.Compiler.Core.csproj" />
   </ItemGroup>
 
 </Project>
