fix: Correct SonarQube scanner report file path for Windows
- Update scanMetadataReportFile to .\.sonar\scanner\report-task.txt
- Fixes quality gate check failure due to missing report file
- Path matches Windows scanner output location

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,4 +76,6 @@ jobs:
         uses: SonarSource/sonarqube-quality-gate-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          scanMetadataReportFile: .\.sonar\scanner\report-task.txt
         timeout-minutes: 5
