--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         shell: powershell
         run: |
 
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kennethcochran_GameVM" /o:"kennethcochran" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token=$env:SONAR_TOKEN /d:sonar.working.directory=".scannerwork"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kennethcochran_GameVM" /o:"kennethcochran" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token=$env:SONAR_TOKEN
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           dotnet build
@@ -72,10 +72,20 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
+      - name: Check SonarQube report files
+        shell: powershell
+        run: |
+          Write-Host "Listing .scannerwork directory:"
+          if (Test-Path .scannerwork) {
+            Get-ChildItem -Path .scannerwork -Recurse -Force | Write-Host
+          } else {
+            Write-Host ".scannerwork directory does not exist"
+          }
+          Write-Host "Listing root directory for report-task.txt:"
+          Get-ChildItem -Path . -Recurse -Filter "report-task.txt" -Force | Write-Host
+          
       - name: SonarQube Quality Gate check
         uses: SonarSource/sonarqube-quality-gate-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          scanMetadataReportFile: .scannerwork/report-task.txt
         timeout-minutes: 5
