--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,15 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
+      - name: Debug report file
+        shell: powershell
+        run: |
+          Write-Host "Current directory: $(Get-Location)"
+          Write-Host "Files in current directory:"
+          Get-ChildItem -Path . -Filter "*.txt" -Force | Write-Host
+          Write-Host "Looking for report-task.txt:"
+          Test-Path "report-task.txt" | Write-Host
+          
       - name: SonarQube Quality Gate check
         uses: SonarSource/sonarqube-quality-gate-action@master
         env:
