feat: Add explicit SonarQube Quality Gate check for trunk-based development
- Quality gate is currently failing but builds are green
- Add explicit quality gate check to fail build when quality standards not met
- Required for trunk-based development without PR protection rules
- Will prevent quality regressions in main branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,3 +71,9 @@ jobs:
           
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+          
+      - name: Wait for SonarQube Quality Gate
+        uses: SonarSource/sonarqube-quality-gate-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        timeout-minutes: 5
