fix: Use cobertura format for SonarQube coverage
- Change from -f xml to -f cobertura for dotnet-coverage
- SonarQube expects cobertura format for coverage reports
- Should fix the XML parsing error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           # Run Unit/BDD tests
-          dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
+          dotnet-coverage collect "dotnet test" -f cobertura -o "coverage.xml"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           # Verify coverage file exists
