fix: Update coverage filename and path
- Change to coverage.cobertura.xml for clarity
- Update scanner path to match new filename
- Should help with coverage file recognition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,20 +55,20 @@ jobs:
         shell: powershell
         run: |
 
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kennethcochran_GameVM" /o:"kennethcochran" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token=$env:SONAR_TOKEN /d:sonar.coverageReportPaths="coverage.xml"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kennethcochran_GameVM" /o:"kennethcochran" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token=$env:SONAR_TOKEN /d:sonar.coverageReportPaths="coverage.cobertura.xml"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           dotnet build
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           # Run Unit/BDD tests
-          dotnet-coverage collect "dotnet test" -f cobertura -o "coverage.xml"
+          dotnet-coverage collect "dotnet test" -f cobertura -o "coverage.cobertura.xml"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
           # Verify coverage file exists
-          if (Test-Path "coverage.xml") {
+          if (Test-Path "coverage.cobertura.xml") {
             Write-Host "Coverage file created successfully"
-            Get-Item "coverage.xml" | Write-Host
+            Get-Item "coverage.cobertura.xml" | Write-Host
           } else {
             Write-Host "Warning: Coverage file not found"
           }
