fix: Install dotnet tools before running tests
- Add dotnet tool restore to install reportgenerator
- This should fix the build failures caused by missing reportgenerator tool
- Coverage aggregation should now work properly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,10 @@ jobs:
           dotnet build
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
+          # Install .NET tools (including reportgenerator)
+          dotnet tool restore
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+          
           # Run Unit/BDD tests with coverage
           dotnet test --collect:"XPlat Code Coverage"
           if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
